--- a/views/partials/whatsapp.ejs
+++ b/views/partials/whatsapp.ejs
@@ -1,6 +1,6 @@
 <div class="stycky-wpp">
     <a href="https://wa.me/573016091063?text=Hola, me puedes ayudar con" target="_blank" class="stycky-wpp-btn">
-        <img width="64" height="64" decoding="async" src="../../img/iconos/Whatsapp_Icon.png"
+        <img width="64" height="64" decoding="async" src="../img/iconos/Whatsapp_Icon.png"
             alt="whatsapp-contacto" />
         <div class="textoBoton">CONTÁCTANOS</div>
     </a>
