--- a/views/partials/encabezados.ejs
+++ b/views/partials/encabezados.ejs
@@ -13,3 +13,4 @@
 <link rel="stylesheet" href="css/global.css" />
 <link rel="stylesheet" href="css/public.css" />
 <link rel="stylesheet" href="css/componentes/navbar.css">
+<link rel="stylesheet" href="libraries/css/Bootstrap-5.3.3.css" />
