Avances en los ajustes en el front y variables de configuración.

--- a/views/partials/encabezados.ejs
+++ b/views/partials/encabezados.ejs
@@ -1,5 +1,6 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title><%= title + " - " + name %></title>
 <!-- Favicon -->
 <link rel="icon" type="image/x-icon" href="img/favicon/Favicon.ico" />
 <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png" />
