--- a/views/partials/componentes/header.ejs
+++ b/views/partials/componentes/header.ejs
@@ -1,5 +1,7 @@
+<% if (headerText) { %>
 <header class="main-header text-white text-center">
     <div class="container">
-        <h1><i class="fas fa-star"></i> ¡Disfruta los mejores eventos en tu ciudad!<i class="fas fa-star"></i></h1>
+        <h1><%= headerText %></h1>
     </div>
-</header>
+</header> 
+<% } %>
