--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,9 +1,7 @@
-<!-- Barra de navigación -->
 <nav class="navbar navbar-expand-lg navbar-dark custom-navbar sticky-top">
     <div class="container">
         <a class="navbar-brand" href="#">
-            <i class="fas fa-music"></i> Conciertos y Eventos COL
-            <!-- <i class="fas fa-music"></i> Conciertos y Eventos COL -->
+            <i class="fas fa-music"></i> <%= name %>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
