--- a/views/partials/encabezados.ejs
+++ b/views/partials/encabezados.ejs
@@ -13,5 +13,5 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
 <link rel="stylesheet" href="css/global.css" />
 <link rel="stylesheet" href="css/public.css" />
-<link rel="stylesheet" href="css/componentes/navbar.css">
+<link rel="stylesheet" href="css/navbar.css">
 <link rel="stylesheet" href="libraries/css/Bootstrap-5.3.3.css" />
