--- a/views/partials/componentes/slider.ejs
+++ b/views/partials/componentes/slider.ejs
@@ -24,7 +24,7 @@
               <p class="event-description">
                 <%= evento.descripcion %>
               </p>
-              <button class="cta-button" onclick="Slider.handleCTAClick('<%= evento.artista %>')">COMPRAR
+              <button class="cta-button" onclick="buyTicket('<%= evento.id %>')">COMPRAR
                 ENTRADAS</button>
             </div>
             <div class="slide-image">
