--- a/views/partials/componentes/eventos.ejs
+++ b/views/partials/componentes/eventos.ejs
@@ -8,7 +8,7 @@
                     <h3 class="event-card-title"><%= evento.titulo %></h3>
                     <div class="event-card-date"><%= evento.fechaHora %></div>
                     <div class="event-card-location"><%= evento.ubicacion %></div>
-                    <button class="event-card-button">Comprar Entradas</button>
+                    <button class="event-card-button" onclick="buyTicket('<%= evento.id %>')" >🎫 Comprar Entradas</button>
                 </div>
             </div>
         <% }) %>
