Creacion y ejecucion de la vista de entradas

--- a/views/Entradas.ejs
+++ b/views/Entradas.ejs
@@ -422,7 +422,7 @@
                 return;
             }
 
-            const total = (currentLocation.precio * quantity) + 4500;
+            const total = (currentLocation.precio * quantity) ;
 
             Swal.fire({
                 title: 'RECUERDE!',
