Correcion Linea wpp

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<% let whatsappLink=`https://wa.me/${whatsapp}`; %>
+<% let whatsappLink=`https://wa.me/message/${whatsapp}`; %>
 
 <footer class="main-footer">
     <div class="container">
