--- a/views/partials/whatsapp.ejs
+++ b/views/partials/whatsapp.ejs
@@ -1,5 +1,5 @@
 <% 
-let whatsappLink=`https://wa.me/${whatsapp}`; 
+let whatsappLink=`https://wa.me/message/${whatsapp}`; 
 if (whatsappText) { 
     whatsappLink +=`?text=${encodeURIComponent(whatsappText)}`; 
 } 
@@ -11,4 +11,4 @@ if (whatsappText) {
             alt="whatsapp-contacto" />
         <div class="textoBoton">CONTÁCTANOS</div>
     </a>
-</div>  
+</div>
