--- a/views/partials/quienesSomos.ejs
+++ b/views/partials/quienesSomos.ejs
@@ -67,6 +67,13 @@
                     <p>Registro Único Empresarial y Social que certifica la información de nuestra empresa</p>
                     <a href="#" class="download-btn" onclick="downloadDocument('CERTIFICADOTUBOLETA')">Descargar PDF</a>
                 </div>
+
+                <div class="document-card">
+                    <div class="document-icon">📊</div>
+                    <h3>Certificado Bancario</h3>
+                    <p>Registro Único Empresarial y Social que certifica la información de nuestra empresa</p>
+                    <a href="#" class="download-btn" onclick="downloadDocument('CERTIFICACIONBANCARIANEQUI')">Descargar PDF</a>
+                </div>
             </div>
 
             <div class="legal-notice">
